# PastoAppBack

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_init.py  20260208_000001_create_resources.py
src/pastoapp/: __init__.py  main.py
src/pastoapp/api/: router.py
src/pastoapp/api/endpoints/: pasto_entries.py  photos.py  resources.py  status.py  sync.py
src/pastoapp/core/: config.py  logging.py
src/pastoapp/crud/: pasto_entry.py  photo.py
src/pastoapp/db/: session.py
src/pastoapp/models/: pasto_entry.py  photo.py
src/pastoapp/schemas/: pasto_entry.py  photo.py  resource.py  sync.py
src/pastoapp/utils/: ids.py
tests/: conftest.py  test_entries.py  test_health.py  test_resources.py  test_sync.py
